--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "fix": "next lint --fix",
     "eslint-fix": "eslint . --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "deploy:prod": "yarn install && next build && chmod +x pm2-server.sh && ./pm2-server.sh"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.2",
