--- a/package.json
+++ b/package.json
@@ -60,9 +60,7 @@
     "swr": "^2.1.0",
     "typescript": "4.9.5",
     "use-context-selector": "^1.4.1",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
+    "uuid": "^9.0.0",
     "@antfu/eslint-config": "^0.36.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/js-cookie": "^3.0.3",
@@ -72,7 +70,7 @@
     "lint-staged": "^13.2.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
-  },
+  }
   "lint-staged": {
     "**/*.js?(x)": [
       "eslint --fix"
